# trustgate-evals

./: .gitignore  README.md  pyproject.toml
data/: bias_minimal.jsonl  expected_outputs.json  fact_minimal.jsonl  judge_minimal.jsonl  pred.json  pred.txt  pricing_openai.jsonl  prompt_injection.jsonl  ref.json  ref.txt  sample_intents.json  sample_transcripts.json  wer_sample.json
notebooks/: intent_eval.ipynb  wer_analysis.ipynb
notebooks/results/: intent_eval.json
results/: evaluations.json  intent_eval.csv
src/evaluators/: bias_eval.py  common.py  eval_writer.py  fact_eval.py  intent_eval.py  judge_eval.py  prompt_injection_eval.py  usage_eval.py  wer.py
tests/: test_bias_eval.py  test_fact_eval.py  test_intent_eval.py  test_judge_eval.py  test_prompt_injection_eval.py  test_usage_eval.py  test_wer.py
